# serializer version: 1
# name: test_OmniSR_community1
  ImageModelDescriptor(
    architecture=OmniSRArch(
      id='OmniSR',
      name='OmniSR',
    ),
    input_channels=3,
    model_bytes=3138416,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      'w8',
      '5nr',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_OmniSR_community2
  ImageModelDescriptor(
    architecture=OmniSRArch(
      id='OmniSR',
      name='OmniSR',
    ),
    input_channels=3,
    model_bytes=3221504,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      'w8',
      '5nr',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_OmniSR_official_x2
  ImageModelDescriptor(
    architecture=OmniSRArch(
      id='OmniSR',
      name='OmniSR',
    ),
    input_channels=3,
    model_bytes=3138416,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      'w8',
      '5nr',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_OmniSR_official_x3
  ImageModelDescriptor(
    architecture=OmniSRArch(
      id='OmniSR',
      name='OmniSR',
    ),
    input_channels=3,
    model_bytes=3173036,
    output_channels=3,
    purpose='SR',
    scale=3,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      'w8',
      '5nr',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_OmniSR_official_x4
  ImageModelDescriptor(
    architecture=OmniSRArch(
      id='OmniSR',
      name='OmniSR',
    ),
    input_channels=3,
    model_bytes=3221504,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=True,
    tags=list([
      '64nf',
      'w8',
      '5nr',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
